# utsma-sim

./: .gitignore  README.md  build_image.ps1  build_image.sh  run_image.ps1  run_image.sh  run_image2.ps1  run_image2.sh
code_explain/: vehicle_model_test.cpp
d_triang/: CMakeLists.txt  README.md  package.xml
d_triang/include/d_triang/: d_triang_planner.hpp  d_triang_types.hpp  d_triang_visualise.hpp  gui.hpp
d_triang/include/geometry/: common_types.hpp  d_triang_planner.hpp  d_triang_planner_color_light.hpp  d_triang_planner_realtime.hpp  d_triang_types.hpp
d_triang/include/realtime/: d_triang_realtime.hpp
d_triang/include/ros_integration/: d_triang_color_light_ros.hpp  d_triang_realtime_ros.hpp
d_triang/plotting/: CMakeLists.txt
d_triang/plotting/cones_layout/: multi_step.yaml  multi_step1_3.yaml  near_steep_turn.yaml  slight_curve_missing_cone1.yaml  slight_curve_missing_cone2.yaml  slight_curve_missing_cone3.yaml  slight_curve_missing_cone4.yaml  starting_position_sim.yaml  straight_missing_cone.yaml  straight_with_stretch_p.yaml  template.yaml
d_triang/plotting/cones_layout/color/: error_2.yaml  error_3.yaml  error_4.yaml  error_core_dump.yaml  near_steep_turn_color.yaml  neighbor_not_face_handle_error.yaml  one_blue_cone.yaml  only_blue_2.yaml  only_blue_color.yaml  only_blue_wrong_last_segment.yaml  slight_curve_color.yaml  steep_turn_color.yaml  tee.txt  vertices_not_connected_by_an_edge_error.yaml
d_triang/plotting/include/: d_triang_Qt.hpp  d_triang_plot.hpp  d_triang_plot_color.hpp
d_triang/plotting/src/: d_triang_Qt.cpp  d_triang_plot.cpp  d_triang_plot_color.cpp
d_triang/src/: d_triang_planner.cpp
d_triang/src/geometry/: d_triang_planner.cpp  d_triang_planner_color_light.cpp  d_triang_planner_realtime.cpp
d_triang/src/realtime/: d_triang_realtime.cpp
d_triang/src/ros_integration/: d_triang_color_light_ros.cpp  d_triang_realtime_ros.cpp  utsma_path_planner.cpp
d_triang/test/color/: d_triang_planner_color_light_test_fixture.cpp  offset_path_plot.cpp  offset_path_test.cpp  process_group_1_test.cpp  return_first_edge_color_test.cpp
d_triang/test/geometry/: expand_test.cpp  geometry_test_fixture.cpp  get_next_edges_test.cpp  print_test.cpp  return_first_edge_test.cpp
d_triang/test/realtime/: multi_step1.yaml  multi_step_test.cpp  realtime_test_fixture.cpp  see.txt  step1_1.yaml
d_triang/testing-code/: CMakeLists.txt  testCGAL.cpp  testComputeDT.cpp  test_compute_DT.cpp
d_triang/testing-code/cones_layout/: slight_curve.yaml  straight.yaml  straight_with_stretch_p.yaml
docker/: Dockerfile.amd64  Dockerfile.d-triang.amd64
dockerfile/: Dockerfile  Dockerfile.arm64
eufs_gazebo_plugins/: CMakeLists.txt  package.xml
eufs_gazebo_plugins/gazebo_cone_ground_truth/include/eufs_gazebo_plugins/: gazebo_cone_ground_truth.h
eufs_gazebo_plugins/gazebo_cone_ground_truth/src/: gazebo_cone_ground_truth.cpp
eufs_gazebo_plugins/gazebo_race_car_model/: CMakeLists.txt
eufs_gazebo_plugins/gazebo_race_car_model/src/: state_machine.cpp  vehicle_model.cpp
eufs_gazebo_plugins/gazebo_race_car_model/src/models/: dynamic_bicycle.cpp
learning_joy/: CMakeLists.txt  package.xml
learning_joy/src/: ugv_joystick.cpp
note/: vehicle_model.hpp  vehicle_model_test.cpp
testing-code/: testComputeDT.cpp
utsma/: CMakeLists.txt  package.xml
utsma_base/: CMakeLists.txt  package.xml
utsma_description/: CMakeLists.txt  package.xml
utsma_description/config/rviz/: utsma.rviz  visualisator.rviz
utsma_description/launch/: test_visualisator.launch  visualisator.launch
utsma_description/robots/: robot.urdf.xacro
utsma_description/sensors/: VLP-16.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect.urdf.xacro  kinectv2.urdf.xacro  pointgrey_bumblebee2.urdf.xacro  zed.urdf.xacro  zed2.urdf.xacro
utsma_description/urdf/: utsma_base.urdf.xacro  wheels.urdf.xacro
utsma_gazebo/: CMakeLists.txt  README.md  package.xml
utsma_gazebo/launch/: load_car.launch  simulation.launch  small_track.launch
utsma_gazebo/worlds/: small_track.world
utsma_navigation/: CMakeLists.txt  package.xml
utsma_navigation/include/utsma_navigation/: twist_to_ackermann_converter.hpp
utsma_navigation/src/: twist_to_ackermann_converter.cpp
wiki/: system.md
